frontend/test/should_fail/exec_027.grg
rule r : (Node) {
  modify{
    y : Node;
    exec( (z:Node)=r && r ); // nothing may be assigned to graph element y
    return (y);
  }
}
